Add example blog posts i convert -resize 23.8% featured.jpg featured.png pngquant --ext .png --force featured.png

--- a/config.yaml
+++ b/config.yaml
@@ -30,6 +30,8 @@ params:
   navbar:
     - title: About
       url: /about
+    - title: Blog
+      url: /posts
   footer:
     logo: uc-ospo-network-logo.svg
     socialmediatitle: ""
