Add placeholder logos

--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ params:
     - title: Blog
       url: /posts
   footer:
-    logo: logo.svg
+    logo: uc-ospo-network-logo.svg
     socialmediatitle: ""
     socialmedia:
       - link: https://github.com/UC-OSPO-Network/
