Move themes into About section (#51)
* Move themes into About section

* Add metadata

* Remove theme links

* Add menu for themes

* Turns out Hugo is weird

* Move themes to own section in nav bar

* Add missing title field

--- a/config.yaml
+++ b/config.yaml
@@ -52,14 +52,10 @@ params:
   navbar:
     - title: About
       url: /about
+    - title: Guiding Themes
+      url: /guiding-themes
     - title: Blog
       url: /posts
-    - title: Discovery
-      url: /discovery
-    - title: Education
-      url: /education
-    - title: Sustainability
-      url: /sustainability
     - title: Resources
       url: /oss-resources
   footer:
