Add sublinks to nav

--- a/config.yaml
+++ b/config.yaml
@@ -54,6 +54,11 @@ params:
       url: /about
     - title: Events
       url: /events
+      sublinks:
+        - title: Sponsorship info
+          url: /sponsor
+        - title: Speakers
+          url: /speakers
     - title: Guiding Themes
       url: /guiding-themes
     - title: Blog
