Create submenu for UC Open in nav bar

--- a/config.yaml
+++ b/config.yaml
@@ -57,7 +57,11 @@ params:
         - title: Guiding Themes
           url: /guiding-themes
     - title: UC Open 2025
-      url: /events/uc-open-4-2025
+      sublinks:
+        - title: Info and registration
+          url: /events/uc-open-4-2025
+        - title: Speakers
+          url: /events/uc-open-4-2025/speakers
     - title: Blog
       url: /posts
     - title: Resources
