--- a/config.yaml
+++ b/config.yaml
@@ -56,6 +56,8 @@ params:
           url: /about
         - title: Guiding Themes
           url: /guiding-themes
+        - title: Network Services
+          url: /services
     - title: Events
       url: /events
     - title: Blog
