Apply suggestions from code review
Use L2 headers instead of L1; keep existing file structure and put survey under oss-resources

Co-authored-by: Laura Langdon <48335772+LauraLangdon@users.noreply.github.com>

--- a/config.yaml
+++ b/config.yaml
@@ -66,10 +66,10 @@ params:
       url: /posts
     - title: Resources
       sublinks:
-        - title: OSS resources
+        - title: Resources
           url: /resources/oss-resources
         - title: 2025 Survey
-          url: /resources/survey
+          url: /oss-resources/survey
 
   footer:
     logo: uc-ospo-network-logo.svg
