--- a/config.yaml
+++ b/config.yaml
@@ -66,7 +66,7 @@ params:
       url: /posts
     - title: Resources
       sublinks:
-        - title: Resources
+        - title: Templates and tutorials
           url: /oss-resources
         - title: 2025 Survey
           url: /oss-resources/survey
